# code-RAG

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  app.py  example.env  improve_query_effectiveness.md  main.py  prompt_flow.py  pyproject.toml  readme.rst  requirements-compatible.txt  test_embedding_model.py  test_metadata.py  test_new_model.py
coderag/: cli.py  config.py  embeddings.py  index.py  monitor.py  search.py
coderag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: initialize_index.py
tests/: test_deepseek.py  test_deepseek_connection.py  test_faiss.py  test_index.py  test_model_loading.py  test_query.py  test_search.py
